Bug 168662 - Writer markdown export: anchored images are not handled
Summary: Writer markdown export: anchored images are not handled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-02 13:58 UTC by Miklos Vajna
Modified: 2025-10-03 18:04 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (14.23 KB, application/vnd.oasis.opendocument.text)
2025-10-02 13:58 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2025-10-02 13:58:14 UTC
Created attachment 203110 [details]
Minimal reproducer

Steps to reproduce the problem:

1) open the attached bugdoc
2) export to markdown

Expected result: an image between the two letters

Actual result: image is lost
Comment 1 Commit Notification 2025-10-03 15:14:57 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3c29e1277bda566b4455123a7a53c8f0fc6eda98

tdf#168662 sw markdown export: extract inline image export functions

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2025-10-03 18:04:13 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e0601a598977265c5b05ba397bce04d9689fca4b

tdf#168662 sw markdown export: handle anchored images

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.