tdf#168662 sw markdown export: extract inline image export functions

1) ApplyItem() knows how to convert a fly frame format of an inline
   image and store it in an SwMDImageInfo, but this can be extracted to
   a new ApplyFlyFrameFormat(), to be reused for anchored images later.

2) Similarly, OutFormattingChange() knows how to write an SwMDImageInfo
   of an inline image with markdown syntax, but this can be extracted to
   a new OutMarkdown_SwMDImageInfo(), to be reused for anchored images
   later.

No functional changes intended, but this allows to reduce the size of
the actual anchored image support patch.

Change-Id: I62a90518a0df6561f5957c04ac364d5b1cfce29e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191810
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>